--- a/_project-v2.json
+++ b/_project-v2.json
@@ -88,6 +88,22 @@
     "creator_github_handle": "suddhaso"
   },
   {
+    "project_uid": "es_ms_translation_sumano_sutta",
+    "name": "Spanish sutta translation Bhante Sumano",
+    "root_path": "root/pli/ms/sutta/an",
+    "translation_path": "translation/es/sumano/sutta/an",
+    "translation_muids": "translation-es-sumano",
+    "creator_github_handle": "vensumano"
+  },
+  {
+    "project_uid": "es_ms_translation_sumano_vinaya",
+    "name": "Spanish vinaya translation Bhante Sumano",
+    "root_path": "root/pli/ms/vinaya",
+    "translation_path": "translation/es/sumano/vinaya",
+    "translation_muids": "translation-es-sumano",
+    "creator_github_handle": "vensumano"
+  },
+  {
     "project_uid": "en_ms_translation_sujato",
     "name": "English translation Bhikkhu Sujato",
     "root_path": "root/pli/ms/sutta",
@@ -128,20 +144,12 @@
     "creator_github_handle": "sujato"
   },
   {
-    "project_uid": "es_ms_translation_sumano_sutta",
-    "name": "Spanish sutta translation Bhante Sumano",
-    "root_path": "root/pli/ms/sutta/an",
-    "translation_path": "translation/es/sumano/sutta/an",
-    "translation_muids": "translation-es-sumano",
-    "creator_github_handle": "vensumano"
-  },
-  {
-    "project_uid": "es_ms_translation_sumano_vinaya",
-    "name": "Spanish vinaya translation Bhante Sumano",
-    "root_path": "root/pli/ms/vinaya",
-    "translation_path": "translation/es/sumano/vinaya",
-    "translation_muids": "translation-es-sumano",
-    "creator_github_handle": "vensumano"
+    "project_uid": "en_vri_translation_pasanna",
+    "name": "English translation Venerable Pasanna",
+    "root_path": "root/pli/vri/vinaya",
+    "translation_path": "translation/en/pasanna/vinaya",
+    "translation_muids": "translation-en-pasanna",
+    "creator_github_handle": "delightedbydhamma"
   },
   {
     "project_uid": "fi_ms_translation_mudito_sutta",
