--- a/_project.json
+++ b/_project.json
@@ -65,6 +65,17 @@
       }
     ]
   },
+  "de_vri_translation_sabbamitta": {
+    "name": "German Patimokkha translation Sabbamitta",
+    "root_path": "root/pli/vri/vinaya",
+    "translation_path": "translation/de/sabbamitta/vinaya",
+    "translation_muids": "translation-de-sabbamitta",
+    "collaborator": [
+      {
+        "author_github_handle": "sabbamitta"
+      }
+    ]
+  },
   "en_ms_translation_brahmali": {
     "name": "English translation Bhikkhu Brahmali",
     "root_path": "root/pli/ms/vinaya",
@@ -187,7 +198,7 @@
     ]
   },
   "en_vri_translation_brahmali": {
-    "name": "English translation Bhikkhu Brahmali",
+    "name": "English Patimokkha translation Bhikkhu Brahmali",
     "root_path": "root/pli/vri/vinaya",
     "translation_path": "translation/en/brahmali/vinaya",
     "translation_muids": "translation-en-brahmali",
@@ -215,7 +226,7 @@
     ]
   },
   "en_vri_translation_pasanna": {
-    "name": "English translation Venerable Pasanna",
+    "name": "English Patimokkha translation Venerable Pasanna",
     "root_path": "root/pli/vri/vinaya",
     "translation_path": "translation/en/pasanna/vinaya",
     "translation_muids": "translation-en-pasanna",
@@ -226,7 +237,7 @@
     ]
   },
   "en_vri_translation_sujato": {
-    "name": "English translation Bhikkhu Sujato",
+    "name": "English Patimokkha translation Bhikkhu Sujato",
     "root_path": "root/pli/vri/vinaya",
     "translation_path": "translation/en/sujato/vinaya",
     "translation_muids": "translation-en-sujato",
@@ -469,6 +480,20 @@
     "name": "Portuguese translation",
     "root_path": "root/pli/ms/sutta",
     "translation_path": "translation/pt/laera-quaresma/sutta",
+    "translation_muids": "translation-pt-laera-quaresma",
+    "collaborator": [
+      {
+        "author_github_handle": "gnlaera"
+      },
+      {
+        "author_github_handle": "vngmar"
+      }
+    ]
+  },
+  "pt_vri_translation": {
+    "name": "Portuguese Patimokkha translation",
+    "root_path": "root/pli/vri/vinaya",
+    "translation_path": "translation/pt/laera-quaresma/vinaya",
     "translation_muids": "translation-pt-laera-quaresma",
     "collaborator": [
       {
