--- a/_project-v2.json
+++ b/_project-v2.json
@@ -48,6 +48,14 @@
     "creator_github_handle": "sabbamitta"
   },
   {
+    "project_uid": "de_vri_translation_sabbamitta",
+    "name": "German Patimokkha translation Sabbamitta",
+    "root_path": "root/pli/vri/vinaya",
+    "translation_path": "translation/de/sabbamitta/vinaya",
+    "translation_muids": "translation-de-sabbamitta",
+    "creator_github_handle": "sabbamitta"
+  },
+  {
     "project_uid": "en_ms_translation_brahmali",
     "name": "English translation Bhikkhu Brahmali",
     "root_path": "root/pli/ms/vinaya",
@@ -137,7 +145,7 @@
   },
   {
     "project_uid": "en_vri_translation_brahmali",
-    "name": "English translation Bhikkhu Brahmali",
+    "name": "English Patimokkha translation Bhikkhu Brahmali",
     "root_path": "root/pli/vri/vinaya",
     "translation_path": "translation/en/brahmali/vinaya",
     "translation_muids": "translation-en-brahmali",
@@ -153,7 +161,7 @@
   },
   {
     "project_uid": "en_vri_translation_pasanna",
-    "name": "English translation Venerable Pasanna",
+    "name": "English Patimokkha translation Venerable Pasanna",
     "root_path": "root/pli/vri/vinaya",
     "translation_path": "translation/en/pasanna/vinaya",
     "translation_muids": "translation-en-pasanna",
@@ -161,7 +169,7 @@
   },
   {
     "project_uid": "en_vri_translation_sujato",
-    "name": "English translation Bhikkhu Sujato",
+    "name": "English Patimokkha translation Bhikkhu Sujato",
     "root_path": "root/pli/vri/vinaya",
     "translation_path": "translation/en/sujato/vinaya",
     "translation_muids": "translation-en-sujato",
@@ -341,6 +349,17 @@
     "name": "Portuguese translation",
     "root_path": "root/pli/ms/sutta",
     "translation_path": "translation/pt/laera-quaresma/sutta",
+    "translation_muids": "translation-pt-laera-quaresma",
+    "creator_github_handle": [
+      "gnlaera",
+      "vngmar"
+    ]
+  },
+  {
+    "project_uid": "pt_vri_translation",
+    "name": "Portuguese Patimokkha translation",
+    "root_path": "root/pli/vri/vinaya",
+    "translation_path": "translation/pt/laera-quaresma/vinaya",
     "translation_muids": "translation-pt-laera-quaresma",
     "creator_github_handle": [
       "gnlaera",
