Remove obsolete items from the i18n file and correct errors

--- a/root/en/site/acknowledgments_root-en-site.json
+++ b/root/en/site/acknowledgments_root-en-site.json
@@ -1,5 +1,5 @@
 {
-  "acknowledgments:1": "Acknowledgements",
+  "acknowledgments:1": "Acknowledgments",
   "acknowledgments:2": "SuttaCentral was conceived by Venerable Anālayo (Germany), Rod Bucknell (Australia), and Bhante Sujato (Australia), based on sutta correspondence tables compiled by Rod Bucknell and Ven. Anālayo. The site founders are Rod Bucknell, Bhante Sujato, and John Kelly.",
   "acknowledgments:3": "Version 1—2005",
   "acknowledgments:4": "The initial launch of the site was in 2005. Key people involved with that launch were:",
